feat: sync current project state